--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
 <body>
   <header class="" >
        <nav>
-           <a href="">WebStudio</a>
+           <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
             <ul>
-               <li><a href="" >Студия</a></li>
-               <li><a href="" >Портфолио</a></li>
+               <li><a href="./index.html" >Студия</a></li>
+               <li><a href="./portfolio.html" >Портфолио</a></li>
                <li><a href="" >Контакты</a></li>
             </ul>
             <ul>
@@ -68,7 +68,7 @@
           <footer>
                <div>
                    
-                         <a href="">WebStudio</a>
+                         <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
                          <address>
                               <span>г. Киев, пр-т Леси Украинки, 26</span>
                          <ul>
