--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>homeWork1</title>
+     <title>WebStudio</title>
 </head>
         
 <body>
   <header class="" >
           <nav>
-               <a href="">WebStudio</a>
+               <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
                <ul>
-                    <li><a href="" >Студия</a></li>
-                    <li><a href="" >Портфолио</a></li>
+                    <li><a href="./index.html" >Студия</a></li>
+                    <li><a href="./portfolio.html" >Портфолио</a></li>
                     <li><a href="" >Контакты</a></li>
                </ul>
                <ul>
@@ -71,7 +71,7 @@
           </main>
           <footer>
                <div>
-                         <a href="">WebStudio</a>
+                         <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
                          <address>
                               <span>г. Киев, пр-т Леси Украинки, 26</span>
                          <ul>
