--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
   <header class="" >
        <nav>
-           <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
+           <a href="./index.html">WebStudio</a>
             <ul>
                <li><a href="./index.html" >Студия</a></li>
                <li><a href="./portfolio.html" >Портфолио</a></li>
@@ -68,7 +68,7 @@
           <footer>
                <div>
                    
-                         <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
+                         <a href="./index.html">WebStudio</a>
                          <address>
                               <span>г. Киев, пр-т Леси Украинки, 26</span>
                          <ul>
