--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="" >
           <nav>
-               <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
+               <a href="./index.html">WebStudio</a>
                <ul>
                     <li><a href="./index.html" >Студия</a></li>
                     <li><a href="./portfolio.html" >Портфолио</a></li>
@@ -71,7 +71,7 @@
           </main>
           <footer>
                <div>
-                         <a href="https://khvadim69.github.io/goit-markup-hw-02/">WebStudio</a>
+                         <a href="./index.html">WebStudio</a>
                          <address>
                               <span>г. Киев, пр-т Леси Украинки, 26</span>
                          <ul>
