--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>WebStudio</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet">
      <link rel="stylesheet" href="./css/styles.css"/>
      
 </head>
@@ -51,7 +55,7 @@
                </ul>
              </section>
           <section>
-               <h2>Наша команда</h2>
+               <h2 class="subject">Наша команда</h2>
                <ul>
                     <li><img src="images/imgIgorDemiyanenko.jpg" alt="Foto Igor Demiyanenko" width="370">
                          <p class="name">Игорь Демьяненко</p>
@@ -74,7 +78,7 @@
           </main>
           <footer>
                <div>
-                         <a href="./index.html">WebStudio</a>
+                         <a href="./index.html" class="logo">WebStudio</a>
                          <address>
                               <span>г. Киев, пр-т Леси Украинки, 26</span>
                          <ul>
